created a Camp component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "cSpell.words": [
         "hilink",
         "Hilink",
+        "Pasuruan",
+        "Prigen",
+        "Putuk",
+        "Truno",
         "xixixi"
     ]
 }
